--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -38,9 +38,6 @@ jobs:
       - name: Checkout the Repository
         uses: actions/checkout@v3
 
-      - name: Setup Docker Build
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -48,6 +45,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push Docker
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nextjs-pharos:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextjs-pharos:latest
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nextjs-pharos:latest
